--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/cors": "^2.8.14",
     "@types/express": "^4.17.19",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "typescript": "^5.2.2"
   }
 }
